--- a/package.json
+++ b/package.json
@@ -2,72 +2,25 @@
   "name": "Snapshot",
   "description": "Rubios Website",
   "version": "0.0.0",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/react-boilerplate/react-boilerplate-cra-template.git"
-  },
-  "license": "MIT",
   "engines": {
     "yarn": ">=1.22.10",
     "node": ">=14.0.0"
   },
-  "bugs": {
-    "url": "https://github.com/react-boilerplate/react-boilerplate-cra-template/issues"
-  },
-  "main": "template.json",
-  "files": [
-    "template",
-    "template.json"
-  ],
-  "keywords": [
-    "react",
-    "create-react-app",
-    "template",
-    "typescript",
-    "redux",
-    "reduxjs",
-    "react-redux",
-    "react-boilerplate",
-    "styled-components"
-  ],
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "lint-staged": {
-    "*.{ts,tsx,js,jsx}": [
-      "yarn run eslint --fix"
-    ],
-    "*.{md,json}": [
-      "prettier --write"
-    ]
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*/*.d.ts",
-      "!src/**/*/Loadable.{js,jsx,ts,tsx}",
-      "!src/**/*/messages.ts",
-      "!src/reportWebVitals.ts",
-      "!src/**/*/types.ts",
-      "!src/index.tsx"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 90,
-        "functions": 90,
-        "lines": 90,
-        "statements": 90
-      }
-    }
-  },
   "dependencies": {
+    "@emotion/react": "11.7.1",
+    "@emotion/styled": "11.6.0",
+    "@mui/material": "5.2.5",
     "@reduxjs/toolkit": "1.6.0",
     "@types/jest": "27.0.3",
     "@types/webpack": "5.28.0",
     "fontfaceobserver": "2.1.0",
+    "formik": "2.2.9",
     "i18next": "20.3.2",
     "i18next-browser-languagedetector": "6.1.2",
     "react": "17.0.2",
