--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,5 @@
   "useTabs": false,
   "semi": true,
   "singleQuote": true,
-  "trailingComma": "all",
-  "arrowParens": "avoid"
+  "trailingComma": "all"
 }
