--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.21",
-    "@types/redux-persist": "^4.3.1",
+    "@types/redux-persist": "4.3.1",
     "@types/redux-thunk": "^2.1.0",
+    "node-sass": "7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0",
+    "redux-persist": "6.0.0",
     "redux-saga": "^1.1.3",
+    "sass": "1.49.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
@@ -51,6 +53,8 @@
     ]
   },
   "devDependencies": {
-    "@types/redux-logger": "^3.0.9"
+    "@types/redux-logger": "^3.0.9",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-prettier": "4.0.0"
   }
 }
