--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build.wordpress": "PUBLIC_URL=/wp-content/reactpress/apps/rubios/build react-scripts build --env=rubioswpengine",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -55,6 +56,7 @@
   "devDependencies": {
     "@types/redux-logger": "^3.0.9",
     "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-prettier": "4.0.0"
+    "eslint-plugin-prettier": "4.0.0",
+    "prettier": "2.5.1"
   }
 }
