--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "11.7.1",
+    "@emotion/styled": "11.6.0",
+    "@mui/material": "5.3.0",
+    "@mui/styled-engine-sc": "5.3.0",
+    "@mui/styles": "5.3.0",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -15,6 +20,7 @@
     "@types/redux-persist": "4.3.1",
     "@types/redux-thunk": "^2.1.0",
     "node-sass": "7.0.1",
+    "prop-types": "15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -25,6 +31,7 @@
     "redux-persist": "6.0.0",
     "redux-saga": "^1.1.3",
     "sass": "1.49.0",
+    "styled-component": "2.8.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
