--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "11.7.1",
+    "@emotion/styled": "11.6.0",
+    "@mui/material": "5.3.1",
+    "@react-google-maps/api": "2.7.0",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/google-maps-react": "2.0.5",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.19",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.21",
+    "@types/react-window": "1.8.5",
     "@types/redux-persist": "4.3.1",
     "@types/redux-thunk": "^2.1.0",
     "node-sass": "7.0.1",
@@ -20,6 +26,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "6.2.1",
     "react-scripts": "5.0.0",
+    "react-window": "1.8.6",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-persist": "6.0.0",
