--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "@emotion/react": "11.7.1",
     "@emotion/styled": "11.6.0",
+    "@material-ui/icons": "4.11.2",
+    "@mui/icons-material": "5.3.1",
     "@mui/material": "5.3.1",
+    "@mui/styles": "5.3.0",
     "@react-google-maps/api": "2.7.0",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
