--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.19",
     "@types/react": "^17.0.38",
+    "@types/react-copy-to-clipboard": "5.0.2",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.21",
     "@types/react-window": "1.8.5",
