--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/axios": "0.14.0",
     "@types/google-maps-react": "2.0.5",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.19",
@@ -24,6 +25,7 @@
     "@types/react-window": "1.8.5",
     "@types/redux-persist": "4.3.1",
     "@types/redux-thunk": "^2.1.0",
+    "axios": "0.25.0",
     "node-sass": "7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -34,7 +36,7 @@
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-persist": "6.0.0",
-    "redux-saga": "^1.1.3",
+    "redux-saga": "1.1.3",
     "sass": "1.49.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
