--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "redux-saga": "1.1.3",
     "sass": "1.49.0",
     "typescript": "^4.5.4",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "@types/crypto-js": "4.1.0",
+    "crypto-js": "4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
