--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/axios": "0.14.0",
+    "@types/crypto-js": "4.1.0",
     "@types/google-maps-react": "2.0.5",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.19",
@@ -25,12 +26,14 @@
     "@types/react-window": "1.8.5",
     "@types/redux-persist": "4.3.1",
     "@types/redux-thunk": "^2.1.0",
+    "crypto-js": "4.1.1",
     "node-sass": "7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "6.2.1",
     "react-scripts": "5.0.0",
+    "react-simple-oauth2-login": "0.5.3",
     "react-window": "1.8.6",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
@@ -38,9 +41,7 @@
     "redux-saga": "1.1.3",
     "sass": "1.49.0",
     "typescript": "^4.5.4",
-    "web-vitals": "^2.1.2",
-    "@types/crypto-js": "4.1.0",
-    "crypto-js": "4.1.1"
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
