--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-simple-oauth2-login": "0.5.3",
     "react-window": "1.8.6",
     "redux": "^4.1.2",
+    "redux-devtools-extension": "2.13.9",
     "redux-logger": "^3.0.6",
     "redux-persist": "6.0.0",
     "redux-saga": "1.1.3",
