--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rubios-website-ts",
-  "version": "0.1.0",
+  "version": "0.0.2-SNAPSHOT",
   "private": true,
   "dependencies": {
     "@emotion/react": "11.7.1",
@@ -74,6 +74,6 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
     "prettier": "2.5.1"
-  },  
+  },
   "proxy": "https://ordering.api.olosandbox.com/v1.1/"
 }
