--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "@types/redux-logger": "^3.0.9",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
+    "http-proxy-middleware": "2.0.3",
     "prettier": "2.5.1"
-  },
-  "proxy": "https://ordering.api.olosandbox.com/v1.1/"
+  }
 }
