--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/redux-persist": "4.3.1",
     "@types/redux-thunk": "^2.1.0",
     "crypto-js": "4.1.1",
+    "formik": "2.2.9",
     "node-sass": "7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -42,7 +43,8 @@
     "redux-saga": "1.1.3",
     "sass": "1.49.0",
     "typescript": "^4.5.4",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "yup": "0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
