--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-imask": "6.4.2",
+    "react-moment": "1.1.1",
     "react-number-format": "4.9.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "6.2.1",
     "react-scripts": "5.0.0",
     "react-simple-oauth2-login": "0.5.3",
+    "react-toastify": "8.2.0",
     "react-window": "1.8.6",
     "redux": "^4.1.2",
     "redux-devtools-extension": "2.13.9",
