--- a/.env.mmubasher
+++ b/.env.mmubasher
@@ -1,6 +1,6 @@
 EXTEND_ESLINT=true
 FAST_REFRESH=true
-APP_BASENAME=order
+APP_BASENAME=
 REACT_APP_FOOTER_URL="https://rubioslivedev.wpengine.com/wp-json/wp-api-menus/v2/menus/6"
 REACT_APP_OLO_API ="/olo_api"
 REACT_APP_PUNCHH_API = "/punchh_api"
