--- a/.env.local
+++ b/.env.local
@@ -4,5 +4,4 @@ APP_BASENAME=order
 REACT_APP_FOOTER_URL="https://rubioslivedev.wpengine.com/wp-json/wp-api-menus/v2/menus/6"
 REACT_APP_OLO_API ="/olo_api"
 REACT_APP_PUNCHH_API = "/punchh_api"
-REACT_APP_PROXY_URL = "http://localhost:8081"
-REACT_APP_OLO_AUTH_KEY = "OloKey ElwEkgDhuasD9HydkYI2kp3Hs0EWPkR2"
+REACT_APP_PROXY_URL = "https://rubioslivedev.wpengine.com"
