--- a/.env.rubioslivestg
+++ b/.env.rubioslivestg
@@ -1,8 +1,8 @@
-GENERATE_SOURCEMAP=false
 EXTEND_ESLINT=true
 FAST_REFRESH=true
-APP_BASENAME=order
+APP_BASENAME=
 REACT_APP_FOOTER_URL="https://rubioslivestg.wpengine.com/wp-json/wp-api-menus/v2/menus/6"
 REACT_APP_OLO_API ="/olo_api"
 REACT_APP_PUNCHH_API = "/punchh_api"
-REACT_APP_PROXY_URL = "https://rubioslivestg.wpengine.com"
+REACT_APP_PUNCHH_PROXY_URL = "http://13.57.90.74:8082"
+REACT_APP_OLO_PROXY_URL = "http://13.57.90.74:8081"
