--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
     "@types/redux-thunk": "^2.1.0",
     "crypto-js": "4.1.1",
     "formik": "2.2.9",
+    "moment": "2.29.1",
     "node-sass": "7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-imask": "6.4.2",
-    "react-moment": "1.1.1",
     "react-number-format": "4.9.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "6.2.1",
