--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "5.3.1",
     "@mui/material": "5.3.1",
     "@mui/styles": "5.3.0",
+    "@olo/pay": "1.1.2",
     "@react-google-maps/api": "2.7.0",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
