add multiple products into basket

--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 EXTEND_ESLINT=true
 FAST_REFRESH=true
-GENERATE_SOURCEMAP=true
+REACT_APP_GENERATE_SOURCEMAP=true
 REACT_APP_FOOTER_URL="https://rubioslivedev.wpengine.com/wp-json/wp-api-menus/v2/menus/6"
 REACT_APP_OLO_API =/olo_api
 REACT_APP_PUNCHH_API =/punchh_api
