--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   "scripts": {
     "start": "react-scripts start --env=local",
     "build": "react-scripts build",
-    "build.prod": "react-scripts build --env=prod",
+    "build.prod": "env-cmd -f .env.prod react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "guest": "env-cmd -f .env.guest react-scripts start",
