--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "moment": "2.29.1",
     "node-sass": "7.0.1",
     "react": "^17.0.2",
+    "react-date-inputs": "1.5.1",
     "react-dom": "^17.0.2",
     "react-imask": "6.4.2",
     "react-number-format": "4.9.1",
