--- a/.env.local
+++ b/.env.local
@@ -12,3 +12,4 @@ REACT_APP_ACCESS_TOKEN = "ede0074cdd8df2f60ff81037cae9358ca9cdf9030c1698d5d3709b
 REACT_APP_AUTHENTICATION_TOKEN = "JckRvf5eQoHPFNb8-Uhm"
 REACT_APP_AUTH_TOKEN="99aUK4SLSvQwZkmCeM8kSgp6uCPR2KNz"
 REACT_APP_PUNCHH_FORGOT_PASSWORD_URL = "https://sandbox.punchh.com/customers/password/new.iframe?slug=rubios"
+REACT_APP_PUNCHH_FACEBOOK_LOGIN_URL = "https://sandbox.punchh.com/customers/auth/facebook?slug=rubios"
