RW - Menu Header Changes
RW - Menu Header Changes

--- a/.env.prod
+++ b/.env.prod
@@ -8,3 +8,4 @@ REACT_APP_PUNCHH_CLIENT_SECRET="a2e83d96525d4d6d3db3823ec86cbd0d935f223f9d7e8df6
 REACT_APP_AUTHORIZATION_URL = "https://sandbox.punchh.com/oauth/authorize"
 REACT_APP_PUNCHH_FORGOT_PASSWORD_URL = "https://sandbox.punchh.com/customers/password/new.iframe?slug=rubios"
 REACT_APP_PUNCHH_FACEBOOK_LOGIN_URL = "https://sandbox.punchh.com/customers/auth/facebook?slug=rubios"
+REACT_APP_INGREDIENT_URL = "https://rubioslivedev.wpengine.com/wp-json/wp/v2/ingredients?plus=*yourplu*"
