--- a/.env.guest
+++ b/.env.guest
@@ -10,4 +10,4 @@ REACT_APP_ACCESS_TOKEN = ""
 REACT_APP_AUTHENTICATION_TOKEN = ""
 REACT_APP_PUNCHH_FORGOT_PASSWORD_URL = "https://sandbox.punchh.com/customers/password/new.iframe?slug=rubios"
 REACT_APP_PUNCHH_FACEBOOK_LOGIN_URL = "https://sandbox.punchh.com/customers/auth/facebook?slug=rubios"
-REACT_APP_INGREDIENT_URL = "https://rubioslivedev.wpengine.com/wp-json/wp/v2/ingredients?plus=*yourplu*"
+REACT_APP_INGREDIENT_URL = "https://rubioslivedev.wpengine.com//wp-json/wp/v2/ingredients?s_plus=*yourplu*"
