--- a/.env.prod
+++ b/.env.prod
@@ -8,3 +8,4 @@ REACT_APP_AUTHORIZATION_URL = "https://sandbox.punchh.com/oauth/authorize"
 REACT_APP_PUNCHH_FORGOT_PASSWORD_URL = "https://sandbox.punchh.com/customers/password/new.iframe?slug=rubios"
 REACT_APP_PUNCHH_FACEBOOK_LOGIN_URL = "https://sandbox.punchh.com/customers/auth/facebook?slug=rubios"
 REACT_APP_INGREDIENT_URL = "https://rubioslivedev.wpengine.com//wp-json/wp/v2/ingredients?s_plus=*yourplu*"
+REACT_APP_GOOGLE_API_KEY = "AIzaSyCCS1PVyJvrNHlRS-aSC0K5V7iNXZmVBsE"
