--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node-sass": "7.0.1",
     "qrcode.react": "3.0.1",
     "react": "^17.0.2",
+    "react-cool-onclickoutside": "1.7.0",
     "react-date-inputs": "1.5.1",
     "react-dom": "^17.0.2",
     "react-imask": "6.4.2",
@@ -52,6 +53,7 @@
     "redux-saga": "1.1.3",
     "sass": "1.49.0",
     "typescript": "^4.5.4",
+    "use-places-autocomplete": "2.0.0",
     "web-vitals": "^2.1.2",
     "yup": "0.32.11"
   },
@@ -83,6 +85,7 @@
     ]
   },
   "devDependencies": {
+    "@types/googlemaps": "3.43.3",
     "@types/redux-logger": "^3.0.9",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
