--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-cool-onclickoutside": "1.7.0",
     "react-date-inputs": "1.5.1",
     "react-dom": "^17.0.2",
+    "react-facebook-login": "4.1.1",
     "react-imask": "6.4.2",
     "react-number-format": "4.9.1",
     "react-redux": "^7.2.6",
@@ -86,6 +87,7 @@
   },
   "devDependencies": {
     "@types/googlemaps": "3.43.3",
+    "@types/react-facebook-login": "4.1.4",
     "@types/redux-logger": "^3.0.9",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
