--- a/.env.prod
+++ b/.env.prod
@@ -9,3 +9,4 @@ REACT_APP_PUNCHH_FORGOT_PASSWORD_URL = "https://sandbox.punchh.com/customers/pas
 REACT_APP_PUNCHH_FACEBOOK_LOGIN_URL = "https://sandbox.punchh.com/customers/auth/facebook?slug=rubios"
 REACT_APP_INGREDIENT_URL = "https://rubioslivedev.wpengine.com//wp-json/wp/v2/ingredients?s_plus=*yourplu*"
 REACT_APP_GOOGLE_API_KEY = "AIzaSyCCS1PVyJvrNHlRS-aSC0K5V7iNXZmVBsE"
+REACT_APP_FACEBOOK_APP_ID = "380212609388497"
