--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^17.0.2",
     "react-facebook-login": "4.1.1",
     "react-imask": "6.4.2",
+    "react-multi-carousel": "2.8.0",
     "react-number-format": "4.9.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "6.2.1",
