--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^17.0.2",
     "react-facebook-login": "4.1.1",
     "react-gtm-module": "2.0.11",
+    "react-helmet": "6.1.0",
     "react-imask": "6.4.2",
     "react-multi-carousel": "2.8.0",
     "react-number-format": "4.9.1",
@@ -89,6 +90,7 @@
     "@types/googlemaps": "3.43.3",
     "@types/react-facebook-login": "4.1.4",
     "@types/react-gtm-module": "2.0.1",
+    "@types/react-helmet": "6.1.5",
     "@types/redux-logger": "^3.0.9",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
