--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "6.2.1",
     "react-scripts": "5.0.0",
+    "react-select": "5.4.0",
     "react-simple-oauth2-login": "0.5.3",
     "react-toastify": "8.2.0",
     "react-window": "1.8.6",
