--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "redux-persist": "6.0.0",
     "redux-saga": "1.1.3",
     "sass": "1.49.0",
+    "static-google-map": "0.0.5",
     "typescript": "^4.5.4",
     "use-places-autocomplete": "2.0.0",
     "web-vitals": "^2.1.2",
