--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "@emotion/react": "11.7.1",
     "@emotion/styled": "11.6.0",
     "@material-ui/icons": "4.11.2",
-    "@mui/icons-material": "5.3.1",
-    "@mui/lab": "5.0.0-alpha.70",
-    "@mui/material": "5.3.1",
-    "@mui/styles": "5.3.0",
+    "@mui/icons-material": "5.11.0",
+    "@mui/lab": "5.0.0-alpha.112",
+    "@mui/material": "5.11.0",
+    "@mui/styles": "5.11.0",
     "@olo/pay": "1.1.2",
     "@react-google-maps/api": "2.7.0",
     "@reduxjs/toolkit": "^1.7.1",
@@ -24,6 +24,7 @@
     "@types/react": "^17.0.38",
     "@types/react-copy-to-clipboard": "5.0.2",
     "@types/react-dom": "^17.0.11",
+    "@types/react-geocode": "0.2.1",
     "@types/react-redux": "^7.1.21",
     "@types/react-window": "1.8.5",
     "@types/redux-persist": "4.3.1",
@@ -39,6 +40,7 @@
     "react-date-inputs": "1.5.1",
     "react-dom": "^17.0.2",
     "react-facebook-login": "4.1.1",
+    "react-geocode": "0.2.3",
     "react-gtm-module": "2.0.11",
     "react-helmet": "6.1.0",
     "react-imask": "6.4.2",
