--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "@types/axios": "^1.0.0",
+    "@types/axios": "0.14.0",
     "@types/crypto-js": "4.1.0",
     "@types/google-maps-react": "2.0.5",
     "@types/jest": "^27.4.0",
