--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/lab": "5.0.0-alpha.112",
     "@mui/material": "5.11.0",
     "@mui/styles": "5.11.0",
+    "@mui/x-date-pickers": "5.0.14",
     "@olo/pay": "1.1.2",
     "@react-google-maps/api": "2.7.0",
     "@reduxjs/toolkit": "^1.7.1",
